src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from src/Parser.y
-----------------------------------------------------------------------------

state 8 contains 1 shift/reduce conflicts.
state 85 contains 3 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Term                               (0)
	Term -> app "(" Term "," Term ")"                  (1)
	Term -> intT                                       (2)
	Term -> true                                       (3)
	Term -> false                                      (4)
	Term -> unitTerm                                   (5)
	Term -> id                                         (6)
	Term -> modId                                      (7)
	Term -> modId Subs                                 (8)
	Term -> "\\" id "." Term                           (9)
	Term -> "λ" id "." Term                            (10)
	Term -> fst Term                                   (11)
	Term -> snd Term                                   (12)
	Term -> "⟨" Term "," Term "⟩"                      (13)
	Term -> inl Term                                   (14)
	Term -> inr Term                                   (15)
	Term -> "(" Term ")"                               (16)
	Term -> "@" Term ":" Type                          (17)
	Term -> box Context "." Term                       (18)
	Term -> box Term                                   (19)
	Term -> let box modId "=" Term in Term             (20)
	Term -> let val id "=" Term in Term                (21)
	Term -> "(" "+" Term Term ")"                      (22)
	Context -> "[" "]"                                 (23)
	Context -> "[" CtxElems "]"                        (24)
	CtxElems -> CtxElem                                (25)
	CtxElems -> CtxElems "," CtxElem                   (26)
	CtxElem -> id                                      (27)
	CtxElem -> id ":" Type                             (28)
	Subs -> "⟨" "⟩"                                    (29)
	Subs -> "⟨" SubElems "⟩"                           (30)
	SubElems -> SubElem                                (31)
	SubElems -> SubElems "," SubElem                   (32)
	SubElem -> id "→" Term                             (33)
	Type -> Type "→" Type                              (34)
	Type -> Type "×" Type                              (35)
	Type -> Type "+" Type                              (36)
	Type -> "(" Type ")"                               (37)
	Type -> "☐" Type                                   (38)
	Type -> Context Type                               (39)
	Type -> id                                         (40)
	Type -> bool                                       (41)
	Type -> int                                        (42)
	Type -> unit                                       (43)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	unit           { UnitTyTok }
	int            { IntTyTok }
	bool           { BoolTyTok }
	"="            { EqualTok }
	"→"            { ArrowTok }
	"×"            { ProdTyTok }
	"+"            { SumTok }
	"☐"            { EmptyCtxTok }
	"@"            { AnnTok }
	":"            { AnnSepTok }
	app            { AppTok }
	","            { CommaTok }
	"("            { LParen }
	")"            { RParen }
	"⟨"            { LAngleTok }
	"⟩"            { RAngleTok }
	"["            { LBrackTok }
	"]"            { RBrackTok }
	id             { IdTok $$ }
	modId          { ModIdTok $$ }
	intT           { IntTok $$ }
	true           { TrueTok }
	false          { FalseTok }
	unitTerm       { UnitTermTok }
	"\\"           { LambdaTok }
	"λ"            { LambdaTok }
	"."            { LambdaBodyTok }
	fst            { FstTok }
	snd            { SndTok }
	inl            { InlTok }
	inr            { InrTok }
	let            { LetTok }
	box            { BoxTok }
	val            { ValTok }
	in             { InTok }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Term            rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	Context         rules 23, 24
	CtxElems        rules 25, 26
	CtxElem         rules 27, 28
	Subs            rules 29, 30
	SubElems        rules 31, 32
	SubElem         rule  33
	Type            rules 34, 35, 36, 37, 38, 39, 40, 41, 42, 43

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 3

State 1


	app            shift, and enter state 2


State 2

	Term -> app . "(" Term "," Term ")"                 (rule 1)

	"("            shift, and enter state 38


State 3

	%start_parse -> Term .                              (rule 0)

	%eof           accept


State 4

	Term -> "@" . Term ":" Type                         (rule 17)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 37

State 5

	Term -> "(" . Term ")"                              (rule 16)
	Term -> "(" . "+" Term Term ")"                     (rule 22)

	"+"            shift, and enter state 36
	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 35

State 6

	Term -> "⟨" . Term "," Term "⟩"                     (rule 13)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 34

State 7

	Term -> id .                                        (rule 6)

	"@"            reduce using rule 6
	":"            reduce using rule 6
	app            reduce using rule 6
	","            reduce using rule 6
	"("            reduce using rule 6
	")"            reduce using rule 6
	"⟨"            reduce using rule 6
	"⟩"            reduce using rule 6
	id             reduce using rule 6
	modId          reduce using rule 6
	intT           reduce using rule 6
	true           reduce using rule 6
	false          reduce using rule 6
	unitTerm       reduce using rule 6
	"\\"           reduce using rule 6
	"λ"            reduce using rule 6
	fst            reduce using rule 6
	snd            reduce using rule 6
	inl            reduce using rule 6
	inr            reduce using rule 6
	let            reduce using rule 6
	box            reduce using rule 6
	in             reduce using rule 6
	%eof           reduce using rule 6


State 8

	Term -> modId .                                     (rule 7)
	Term -> modId . Subs                                (rule 8)

	"@"            reduce using rule 7
	":"            reduce using rule 7
	app            reduce using rule 7
	","            reduce using rule 7
	"("            reduce using rule 7
	")"            reduce using rule 7
	"⟨"            shift, and enter state 33
			(reduce using rule 7)

	"⟩"            reduce using rule 7
	id             reduce using rule 7
	modId          reduce using rule 7
	intT           reduce using rule 7
	true           reduce using rule 7
	false          reduce using rule 7
	unitTerm       reduce using rule 7
	"\\"           reduce using rule 7
	"λ"            reduce using rule 7
	fst            reduce using rule 7
	snd            reduce using rule 7
	inl            reduce using rule 7
	inr            reduce using rule 7
	let            reduce using rule 7
	box            reduce using rule 7
	in             reduce using rule 7
	%eof           reduce using rule 7

	Subs           goto state 32

State 9

	Term -> intT .                                      (rule 2)

	"@"            reduce using rule 2
	":"            reduce using rule 2
	app            reduce using rule 2
	","            reduce using rule 2
	"("            reduce using rule 2
	")"            reduce using rule 2
	"⟨"            reduce using rule 2
	"⟩"            reduce using rule 2
	id             reduce using rule 2
	modId          reduce using rule 2
	intT           reduce using rule 2
	true           reduce using rule 2
	false          reduce using rule 2
	unitTerm       reduce using rule 2
	"\\"           reduce using rule 2
	"λ"            reduce using rule 2
	fst            reduce using rule 2
	snd            reduce using rule 2
	inl            reduce using rule 2
	inr            reduce using rule 2
	let            reduce using rule 2
	box            reduce using rule 2
	in             reduce using rule 2
	%eof           reduce using rule 2


State 10

	Term -> true .                                      (rule 3)

	"@"            reduce using rule 3
	":"            reduce using rule 3
	app            reduce using rule 3
	","            reduce using rule 3
	"("            reduce using rule 3
	")"            reduce using rule 3
	"⟨"            reduce using rule 3
	"⟩"            reduce using rule 3
	id             reduce using rule 3
	modId          reduce using rule 3
	intT           reduce using rule 3
	true           reduce using rule 3
	false          reduce using rule 3
	unitTerm       reduce using rule 3
	"\\"           reduce using rule 3
	"λ"            reduce using rule 3
	fst            reduce using rule 3
	snd            reduce using rule 3
	inl            reduce using rule 3
	inr            reduce using rule 3
	let            reduce using rule 3
	box            reduce using rule 3
	in             reduce using rule 3
	%eof           reduce using rule 3


State 11

	Term -> false .                                     (rule 4)

	"@"            reduce using rule 4
	":"            reduce using rule 4
	app            reduce using rule 4
	","            reduce using rule 4
	"("            reduce using rule 4
	")"            reduce using rule 4
	"⟨"            reduce using rule 4
	"⟩"            reduce using rule 4
	id             reduce using rule 4
	modId          reduce using rule 4
	intT           reduce using rule 4
	true           reduce using rule 4
	false          reduce using rule 4
	unitTerm       reduce using rule 4
	"\\"           reduce using rule 4
	"λ"            reduce using rule 4
	fst            reduce using rule 4
	snd            reduce using rule 4
	inl            reduce using rule 4
	inr            reduce using rule 4
	let            reduce using rule 4
	box            reduce using rule 4
	in             reduce using rule 4
	%eof           reduce using rule 4


State 12

	Term -> unitTerm .                                  (rule 5)

	"@"            reduce using rule 5
	":"            reduce using rule 5
	app            reduce using rule 5
	","            reduce using rule 5
	"("            reduce using rule 5
	")"            reduce using rule 5
	"⟨"            reduce using rule 5
	"⟩"            reduce using rule 5
	id             reduce using rule 5
	modId          reduce using rule 5
	intT           reduce using rule 5
	true           reduce using rule 5
	false          reduce using rule 5
	unitTerm       reduce using rule 5
	"\\"           reduce using rule 5
	"λ"            reduce using rule 5
	fst            reduce using rule 5
	snd            reduce using rule 5
	inl            reduce using rule 5
	inr            reduce using rule 5
	let            reduce using rule 5
	box            reduce using rule 5
	in             reduce using rule 5
	%eof           reduce using rule 5


State 13

	Term -> "\\" . id "." Term                          (rule 9)

	id             shift, and enter state 31


State 14

	Term -> "λ" . id "." Term                           (rule 10)

	id             shift, and enter state 30


State 15

	Term -> fst . Term                                  (rule 11)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 29

State 16

	Term -> snd . Term                                  (rule 12)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 28

State 17

	Term -> inl . Term                                  (rule 14)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 27

State 18

	Term -> inr . Term                                  (rule 15)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 26

State 19

	Term -> let . box modId "=" Term in Term            (rule 20)
	Term -> let . val id "=" Term in Term               (rule 21)

	box            shift, and enter state 24
	val            shift, and enter state 25


State 20

	Term -> box . Context "." Term                      (rule 18)
	Term -> box . Term                                  (rule 19)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	"["            shift, and enter state 23
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 21
	Context        goto state 22

State 21

	Term -> box Term .                                  (rule 19)

	"@"            reduce using rule 19
	":"            reduce using rule 19
	app            reduce using rule 19
	","            reduce using rule 19
	"("            reduce using rule 19
	")"            reduce using rule 19
	"⟨"            reduce using rule 19
	"⟩"            reduce using rule 19
	id             reduce using rule 19
	modId          reduce using rule 19
	intT           reduce using rule 19
	true           reduce using rule 19
	false          reduce using rule 19
	unitTerm       reduce using rule 19
	"\\"           reduce using rule 19
	"λ"            reduce using rule 19
	fst            reduce using rule 19
	snd            reduce using rule 19
	inl            reduce using rule 19
	inr            reduce using rule 19
	let            reduce using rule 19
	box            reduce using rule 19
	in             reduce using rule 19
	%eof           reduce using rule 19


State 22

	Term -> box Context . "." Term                      (rule 18)

	"."            shift, and enter state 56


State 23

	Context -> "[" . "]"                                (rule 23)
	Context -> "[" . CtxElems "]"                       (rule 24)

	"]"            shift, and enter state 54
	id             shift, and enter state 55

	CtxElems       goto state 52
	CtxElem        goto state 53

State 24

	Term -> let box . modId "=" Term in Term            (rule 20)

	modId          shift, and enter state 51


State 25

	Term -> let val . id "=" Term in Term               (rule 21)

	id             shift, and enter state 50


State 26

	Term -> inr Term .                                  (rule 15)

	"@"            reduce using rule 15
	":"            reduce using rule 15
	app            reduce using rule 15
	","            reduce using rule 15
	"("            reduce using rule 15
	")"            reduce using rule 15
	"⟨"            reduce using rule 15
	"⟩"            reduce using rule 15
	id             reduce using rule 15
	modId          reduce using rule 15
	intT           reduce using rule 15
	true           reduce using rule 15
	false          reduce using rule 15
	unitTerm       reduce using rule 15
	"\\"           reduce using rule 15
	"λ"            reduce using rule 15
	fst            reduce using rule 15
	snd            reduce using rule 15
	inl            reduce using rule 15
	inr            reduce using rule 15
	let            reduce using rule 15
	box            reduce using rule 15
	in             reduce using rule 15
	%eof           reduce using rule 15


State 27

	Term -> inl Term .                                  (rule 14)

	"@"            reduce using rule 14
	":"            reduce using rule 14
	app            reduce using rule 14
	","            reduce using rule 14
	"("            reduce using rule 14
	")"            reduce using rule 14
	"⟨"            reduce using rule 14
	"⟩"            reduce using rule 14
	id             reduce using rule 14
	modId          reduce using rule 14
	intT           reduce using rule 14
	true           reduce using rule 14
	false          reduce using rule 14
	unitTerm       reduce using rule 14
	"\\"           reduce using rule 14
	"λ"            reduce using rule 14
	fst            reduce using rule 14
	snd            reduce using rule 14
	inl            reduce using rule 14
	inr            reduce using rule 14
	let            reduce using rule 14
	box            reduce using rule 14
	in             reduce using rule 14
	%eof           reduce using rule 14


State 28

	Term -> snd Term .                                  (rule 12)

	"@"            reduce using rule 12
	":"            reduce using rule 12
	app            reduce using rule 12
	","            reduce using rule 12
	"("            reduce using rule 12
	")"            reduce using rule 12
	"⟨"            reduce using rule 12
	"⟩"            reduce using rule 12
	id             reduce using rule 12
	modId          reduce using rule 12
	intT           reduce using rule 12
	true           reduce using rule 12
	false          reduce using rule 12
	unitTerm       reduce using rule 12
	"\\"           reduce using rule 12
	"λ"            reduce using rule 12
	fst            reduce using rule 12
	snd            reduce using rule 12
	inl            reduce using rule 12
	inr            reduce using rule 12
	let            reduce using rule 12
	box            reduce using rule 12
	in             reduce using rule 12
	%eof           reduce using rule 12


State 29

	Term -> fst Term .                                  (rule 11)

	"@"            reduce using rule 11
	":"            reduce using rule 11
	app            reduce using rule 11
	","            reduce using rule 11
	"("            reduce using rule 11
	")"            reduce using rule 11
	"⟨"            reduce using rule 11
	"⟩"            reduce using rule 11
	id             reduce using rule 11
	modId          reduce using rule 11
	intT           reduce using rule 11
	true           reduce using rule 11
	false          reduce using rule 11
	unitTerm       reduce using rule 11
	"\\"           reduce using rule 11
	"λ"            reduce using rule 11
	fst            reduce using rule 11
	snd            reduce using rule 11
	inl            reduce using rule 11
	inr            reduce using rule 11
	let            reduce using rule 11
	box            reduce using rule 11
	in             reduce using rule 11
	%eof           reduce using rule 11


State 30

	Term -> "λ" id . "." Term                           (rule 10)

	"."            shift, and enter state 49


State 31

	Term -> "\\" id . "." Term                          (rule 9)

	"."            shift, and enter state 48


State 32

	Term -> modId Subs .                                (rule 8)

	"@"            reduce using rule 8
	":"            reduce using rule 8
	app            reduce using rule 8
	","            reduce using rule 8
	"("            reduce using rule 8
	")"            reduce using rule 8
	"⟨"            reduce using rule 8
	"⟩"            reduce using rule 8
	id             reduce using rule 8
	modId          reduce using rule 8
	intT           reduce using rule 8
	true           reduce using rule 8
	false          reduce using rule 8
	unitTerm       reduce using rule 8
	"\\"           reduce using rule 8
	"λ"            reduce using rule 8
	fst            reduce using rule 8
	snd            reduce using rule 8
	inl            reduce using rule 8
	inr            reduce using rule 8
	let            reduce using rule 8
	box            reduce using rule 8
	in             reduce using rule 8
	%eof           reduce using rule 8


State 33

	Subs -> "⟨" . "⟩"                                   (rule 29)
	Subs -> "⟨" . SubElems "⟩"                          (rule 30)

	"⟩"            shift, and enter state 46
	id             shift, and enter state 47

	SubElems       goto state 44
	SubElem        goto state 45

State 34

	Term -> "⟨" Term . "," Term "⟩"                     (rule 13)

	","            shift, and enter state 43


State 35

	Term -> "(" Term . ")"                              (rule 16)

	")"            shift, and enter state 42


State 36

	Term -> "(" "+" . Term Term ")"                     (rule 22)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 41

State 37

	Term -> "@" Term . ":" Type                         (rule 17)

	":"            shift, and enter state 40


State 38

	Term -> app "(" . Term "," Term ")"                 (rule 1)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 39

State 39

	Term -> app "(" Term . "," Term ")"                 (rule 1)

	","            shift, and enter state 78


State 40

	Term -> "@" Term ":" . Type                         (rule 17)

	unit           shift, and enter state 72
	int            shift, and enter state 73
	bool           shift, and enter state 74
	"☐"            shift, and enter state 75
	"("            shift, and enter state 76
	"["            shift, and enter state 23
	id             shift, and enter state 77

	Context        goto state 70
	Type           goto state 71

State 41

	Term -> "(" "+" Term . Term ")"                     (rule 22)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 69

State 42

	Term -> "(" Term ")" .                              (rule 16)

	"@"            reduce using rule 16
	":"            reduce using rule 16
	app            reduce using rule 16
	","            reduce using rule 16
	"("            reduce using rule 16
	")"            reduce using rule 16
	"⟨"            reduce using rule 16
	"⟩"            reduce using rule 16
	id             reduce using rule 16
	modId          reduce using rule 16
	intT           reduce using rule 16
	true           reduce using rule 16
	false          reduce using rule 16
	unitTerm       reduce using rule 16
	"\\"           reduce using rule 16
	"λ"            reduce using rule 16
	fst            reduce using rule 16
	snd            reduce using rule 16
	inl            reduce using rule 16
	inr            reduce using rule 16
	let            reduce using rule 16
	box            reduce using rule 16
	in             reduce using rule 16
	%eof           reduce using rule 16


State 43

	Term -> "⟨" Term "," . Term "⟩"                     (rule 13)

	"@"            shift, and enter state 4
	app            shift, and enter state 2
	"("            shift, and enter state 5
	"⟨"            shift, and enter state 6
	id             shift, and enter state 7
	modId          shift, and enter state 8
	intT           shift, and enter state 9
	true           shift, and enter state 10
	false          shift, and enter state 11
	unitTerm       shift, and enter state 12
	"\\"           shift, and enter state 13
	"λ"            shift, and enter state 14
	fst            shift, and enter state 15
	snd            shift, and enter state 16
	inl            shift, and enter state 17
	inr            shift, and enter state 18
	let            shift, and enter state 19
	box            shift, and enter state 20

	Term           goto state 68

State 44

	Subs -> "⟨" SubElems . "⟩"                          (rule 30)
	SubElems -> SubElems . "," SubElem                  (rule 32)

	","            shift, and enter state 66
	"⟩"            shift, and enter state 67


State 45

	SubElems -> SubElem .                               (rule 31)

	","            reduce using rule 31
	"⟩"            reduce using rule 31


State 46

	Subs -> "⟨" "⟩" .                                   (rule 29)
